--- a/airbean/public/manifest.json
+++ b/airbean/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Airbean App",
+  "name": "Inlämning Airbean",
   "icons": [
     {
       "src": "favicon.ico",
