chaning to drone logo

--- a/airbean/public/manifest.json
+++ b/airbean/public/manifest.json
@@ -1,6 +1,13 @@
 {
   "short_name": "Airbean App",
   "name": "Inlämning Airbean",
+  "icons": [
+    {
+      "src": "logo.svg",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/SVG"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
